--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -118,15 +118,14 @@ import StackAlt from "$assets/stackalt.svg";
 
 # Welcome to Storybook
 
-Storybook helps you build UI components in isolation from your app's business
-logic, data, and context. That makes it easy to develop hard-to-reach states.
-Save these UI states as **stories** to revisit during development, testing, or
-QA.
+Storybook helps you build UI components in isolation from your app's business logic, data, and
+context. That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to
+revisit during development, testing, or QA.
 
-Browse example stories now by navigating to them in the sidebar. View their code
-in the `stories` directory to learn how they work. We recommend building UIs
-with a [**component-driven**](https://componentdriven.org) process starting with
-atomic components and ending with pages.
+Browse example stories now by navigating to them in the sidebar. View their code in the `stories`
+directory to learn how they work. We recommend building UIs with a
+[**component-driven**](https://componentdriven.org) process starting with atomic components and
+ending with pages.
 
 <div className="subheading">Configure</div>
 
@@ -251,6 +250,5 @@ atomic components and ending with pages.
 </div>
 
 <div className="tip-wrapper">
-  <span className="tip">Tip</span>Edit the Markdown in{" "}
-  <code>stories/Introduction.stories.mdx</code>
+  <span className="tip">Tip</span>Edit the Markdown in <code>stories/Introduction.stories.mdx</code>
 </div>
